--- a/LibftXen/Makefile
+++ b/LibftXen/Makefile
@@ -6,7 +6,7 @@
 #    By: susivagn <susivagn@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2017/08/09 17:53:05 by susivagn          #+#    #+#              #
-#    Updated: 2018/02/13 00:28:54 by susivagn         ###   ########.fr        #
+#    Updated: 2018/02/15 13:45:47 by susivagn         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -113,7 +113,8 @@ SRC = ft_bzero.c \
 	  get_next_line.c \
 	  ft_addchartable.c \
 	  ft_inttable.c \
-	  ft_print_table.c
+	  ft_print_table.c \
+	  ft_str_nword.c
 
 OFILE = $(SRC:.c=.o)
 
