--- a/LibftXen/Makefile
+++ b/LibftXen/Makefile
@@ -6,7 +6,7 @@
 #    By: susivagn <susivagn@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2017/08/09 17:53:05 by susivagn          #+#    #+#              #
-#    Updated: 2018/03/09 13:28:48 by susivagn         ###   ########.fr        #
+#    Updated: 2018/03/14 18:25:26 by susivagn         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -115,6 +115,8 @@ SRC = ft_bzero.c \
 	  ft_inttable.c \
 	  ft_print_table.c \
 	  ft_str_nword.c \
+	  ft_print_int_tab.c \
+	  	  
 
 OFILE = $(SRC:.c=.o)
 
